finish first step
